package edu.hitsz.application;

/**
 * @author 210810401 石全
 * @create 2023-04-20$ 15:19
 */
public interface Subscriber {
    void update();
}
